# docdistance

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.github/workflows/: ci.yml
docs/: api-reference.md  cli-reference.md  example-map-interpretations.md  mmbert-quantization-solution.md  wmd-docdistance-solution-sota.md  wmd-docdistance-solution.md  wmd-source-conditioned-docdistance-solution-sota.md  wmd-structure-distance-sota.md  wmd-wrt-source-docdistance-solution.md
docs/acceptance-criteria/: acc-crit-structure-diff.md  (+1 more)
logs/: README.md
notebooks/: 00-kj-mmbert-int8-smoothquant.ipynb  01-kj-document-segmentation.ipynb  02-kj-mmbert-quantization.ipynb  03-kj-mmbert-throughput-saturation.ipynb  04-kj-wmd-document-distance.ipynb  05-kj-source-conditioned-distance.ipynb  09-kj-docdistance-api-e2e.ipynb  10-kj-encoder-length-bucketing.ipynb  11-kj-structure-fixture.ipynb  12-kj-structure-distance-e2e.ipynb  13-kj-structure-diff-library-e2e.ipynb
reports/: 00-mmbert-bestconfig.json  00-mmbert-int8-smoothquant-metrics.json  02-mmbert-bestconfig.json  02-mmbert-quantization-metrics.json  03-mmbert-throughput-saturation.json  E04-source-conditioned-performance-metrics.json  E05-source-conditioned-cpu-speed-metrics.json  E06-trained-scorers-cpu-metrics.json  E07-structure-distance-metrics.json  E08-structure-distance-metrics.json  Q02-mdeberta-quantization-metrics.json  encoder-length-bucketing.json
tests/: test_cli.py  test_distance.py  test_e2e.py  test_pipeline.py  test_structure.py
(+62 files in other folders)
